Added google tracking

--- a/views/index.jade
+++ b/views/index.jade
@@ -47,6 +47,7 @@ block body
           | FriendPerts App 2014
   //All the required files are added to the bottom of the index page
   //The Facebook .js file requires its own div
+  script(src='js/lib/goog.js')
   #fb-root
     script(src='js/lib/fbsync.js')
   script(src='http://static.firebase.com/v0/firebase.js')
