Formatting, fix analytics

--- a/views/partials/partialhome.html
+++ b/views/partials/partialhome.html
@@ -33,6 +33,8 @@
             </h4>
             <h4>
                 Associate different "Tags" with different FriendPerts. An example:
+            </h4>
+            <h5>
                 <ul class="text-left">
                     <li>Mom--@family, @wedding, @cooking, @hometown</li>
                     <li>Dad--@family, @fishing, @fantasyfootball</li>
@@ -40,6 +42,9 @@
                     <li>Sister--@family, @highschool, @dance</li>
                     <li>BestFriend--@college, @fishing, @mlb, @skiing</li>
                 </ul>
+            </h5>
+            <h4>
+                NOTE: Your FriendPerts will only get notifications if they also have signed-up for FriendPerts when you ask your questions
             </h4>
         </div>
         <hr>
