--- a/views/partials/partialhome.html
+++ b/views/partials/partialhome.html
@@ -2,7 +2,7 @@
     <div class="row">
         <h1 style="text-align: center">Welcome to FriendPerts</h1>
         <p class="text-center muted">
-            Get answers to questions from the people who know you best
+            Matt Wopata's AngularJS, Bootstrap 3, FireBase, Express/Node.JS Application
         </p>
     </div>
     <hr>
